css/mediaQueries.css
@media (max-width: 576px) {
  .precHeading,
  .windHeading,
  .gust {
    display: none;
  }
}

@media (max-width: 768px) {
  .foreCastIcon {
    width: 50px;
  }
  .menuItem,
  .windUnit,
  .precUnit,
  .tempHeading,
  .dayHeading {
    display: block;
    /* font-size: 14px; */
  }
}

@media (max-width: 991px) {
  .mainWeatherContainer {
    display: flex;
    flex-direction: column;
  }
}

@media (min-width: 992px) {
  .mainWeatherContainer {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-areas: "mainLeft mainRight";
  }

  .mainLeft {
    border-right: 1px solid lightgray;
    grid-area: mainLeft;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .mainRight {
    grid-area: mainRight;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

